--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "start": "nodemon --exec babel-node --es-module-specifier-resolution=node ./src/index.js"
+    "watch": "nodemon --exec babel-node --es-module-specifier-resolution=node ./src/index.js",
+    "start": "babel-node --es-module-specifier-resolution=node ./src/index.js"
   },
   "dependencies": {
     "@bitnine-oss/ag-driver": "^0.1.0",
